[gd_scene load_steps=2 format=3 uid="uid://crx0d3l4dascf"]

[ext_resource type="Script" path="res://scripts/devotion_spin_box.gd" id="1_qnjul"]

[node name="DevotionSpinBox" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
theme_override_constants/separation = 10
script = ExtResource("1_qnjul")
label_text = "Red"
mana_key = "r"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Red"

[node name="SpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
max_value = 50.0
alignment = 2

[node name="AmountLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 50.0

[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
